# mcp-server-stalwart

./: Cargo.toml
src/: jmap.rs  main.rs  server.rs
